# StackAllocator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_all.cpp  bench_allocation.cpp  bench_helper.h  bench_lifecycle.cpp  bench_marker.cpp  bench_reset.cpp  bench_scope.cpp
benchmarks/common/: helper.h  macros.h  registry.h
benchmarks/suite/access/: marker.cpp  scope.cpp
benchmarks/suite/construction/: allocation.cpp  lifecycle.cpp
benchmarks/suite/core/: reset.cpp
cmake/: StackProConfig.cmake.in
examples/: example_all.cpp  example_basic.cpp  example_helper.h  example_lifecycle.cpp  example_scope.cpp  example_stats.cpp
examples/common/: helper.h  macros.h  registry.h
examples/suite/patterns/: lifecycle.cpp  scope.cpp  statistics.cpp
examples/suite/quickstart/: basic.cpp
include/StackPro/: Contract.h  Stack.h  Stack.tpp  StackScope.h
tests/: test_all.cpp  test_constructor.cpp  test_helper.h  test_introspection.cpp  test_lifecycle.cpp  test_memory.cpp  test_move.cpp  test_scope.cpp  test_state.cpp  test_stats.cpp
tests/common/: framework.h  helper.h  macros.h  registry.h
tests/suite/unit/: constructor.cpp  introspection.cpp  lifecycle.cpp  memory.cpp  move.cpp  scope.cpp  state.cpp  statistics.cpp
